# embedded

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FreeRTOS-openocd.c  FreeRTOSConfig.h  Makefile  README.md  STM32_PROJECT.elf  STM32_PROJECT.hex  adc_handler.c  adc_handler.h  cmake_install.cmake  example.py  main.c  main.map  newlib_stubs.c  start  stm32.cmake  stm32f10x_conf.h  stm32f10x_it.c  stm32f10x_it.h  templateheader.py  toolchainSTM32.cmake
OpenOCD/: openocd.bat  stm32f1x_rtos.cfg
modbus_port/: port.c  port.h  portevent.c  portother.c  portserial.c  porttimer.c
modbus_task/: CMakeLists.txt  modbusTask.c  modbusTask.h
modbus_task/src/: modbusTask.c
serial/: CMakeLists.txt
serial/src/: serial.c
test/: CTestTestfile.cmake
test/suite_1/: CTestTestfile.cmake
xprintf/: CMakeLists.txt  xprintf.h
xprintf/src/: xprintf.c
