cmake_minimum_required(VERSION 3.8.1)


SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_ERROR_DEPRECATED ON)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

project(STM32_PROJECT LANGUAGES C ASM)

set(FREERTOS_DIR c:/FreeRTOS/FreeRTOSv9.0.0/FreeRTOS/Source)
add_subdirectory(${FREERTOS_DIR} ${CMAKE_CURRENT_BINARY_DIR}/freertos)
add_subdirectory(serial)
add_subdirectory(xprintf)

set(STM32_FLASH_SIZE "128K")
set(STM32_RAM_SIZE "20K")
set(STM32_STACK_ADDRESS "0x20005000")

set(STM32_FLASH_ORIGIN "0x08000000")
set(STM32_RAM_ORIGIN "0x20000000")

# Compiler definitions for std. periph. library
# Select your chip type here
SET(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -DSTM32F10X_MD -DUSE_STDPERIPH_DRIVER")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DSTM32F10X_MD -DUSE_STDPERIPH_DRIVER")
SET(CMAKE_ASM_FLAGS  "${CMAKE_ASM_FLAGS}")

# Startup sources
# Select your chip type here
SET(STARTUP_SOURCE ${STM32_STARTUP_MD})

# Uncomment needed modules
SET(MOD_SOURCES
 ${STM32_MISC_SOURCE} 
#  ${STM32_ADC_SOURCE}
#  ${STM32_BKP_SOURCE}
#  ${STM32_CAN_SOURCE}
#  ${STM32_CEC_SOURCE}
#  ${STM32_CRC_SOURCE}
#  ${STM32_DAC_SOURCE}
#  ${STM32_DBGMCU_SOURCE}
#  ${STM32_DMA_SOURCE}
#  ${STM32_EXTI_SOURCE}
#  ${STM32_FLASH_SOURCE}
#  ${STM32_FSMC_SOURCE}
  ${STM32_GPIO_SOURCE}
#  ${STM32_I2C_SOURCE}
#  ${STM32_IWDG_SOURCE}
#  ${STM32_PWR_SOURCE}
  ${STM32_RCC_SOURCE}
#  ${STM32_RTC_SOURCE}
#  ${STM32_SDIO_SOURCE}
#  ${STM32_SPI_SOURCE}
#  ${STM32_TIM_SOURCE}
  ${STM32_USART_SOURCE}
#  ${STM32_WWDG_SOURCE}
)

# Project sources
SET(PROJECT_SOURCES
  main.c
  newlib_stubs.c
)

# Default interrupts and system init
SET(SERVICE_SOURCES
  stm32f10x_it.c
  ${STM32_SYSTEM_SOURCE}
)

# Configuring linker script for our target
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/stm32_flash.ld.in ${CMAKE_CURRENT_BINARY_DIR}/stm32_flash.ld)
SET(CMAKE_EXE_LINKER_FLAGS "-T${CMAKE_CURRENT_BINARY_DIR}/stm32_flash.ld ${CMAKE_EXE_LINKER_FLAGS}")

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}/.
  ${STM32_StdPeriphLib_INCLUDE_DIRS}
)

# Compile executable (*.elf)
ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf 
  ${PROJECT_SOURCES} 
  ${MOD_SOURCES} 
  ${STARTUP_SOURCE} 
  ${SERVICE_SOURCES}
  )

target_include_directories(freertos
  PUBLIC
  ${CMAKE_CURRENT_LIST_DIR}
)
target_include_directories(xprintf
  PUBLIC
  ${CMAKE_CURRENT_LIST_DIR}
)

target_link_libraries(${CMAKE_PROJECT_NAME}.elf
  xprintf
  serial  
  freertos
)

# Convert elf to bin and hex
add_custom_command(
  OUTPUT ${CMAKE_PROJECT_NAME}.hex
  COMMAND ${CMAKE_OBJCOPY} 
  ARGS -Oihex ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.hex
  )

add_custom_command(
  OUTPUT ${CMAKE_PROJECT_NAME}.bin
  COMMAND ${CMAKE_OBJCOPY} 
  ARGS -Obinary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin
  )